Update VulnWebApp.java